--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,18 @@
 {% extends 'base.html' %}
 
 {% block title %}
-Does this work?
+Klausur-inator
 {% endblock %}
 
 {% block header %}
-Header stuff? maybe navbar?
 {% endblock %}
 
 {% block content %}
-<h1>Klausur-inator</h1>
-<div></div>
+<div>
+    <h2>Beschreibung:</h2>
+    <p>Hier steht eine Beschreibung vom Projekt.</p>
+    <h2>Umgang:</h2>
+    <p>So geht man mit dem <b>Klausur-Inator</b> um.</p>
+</div>
+
 {% endblock %}
