--- a/templates/index.html
+++ b/templates/index.html
@@ -10,9 +10,17 @@ Klausur-inator
 {% block content %}
 <div>
     <h2>Beschreibung:</h2>
-    <p>Hier steht eine Beschreibung vom Projekt.</p>
+    <p>Der <b>Klausur-Inator</b> kann dir helfen nach fairen Dozierenden und Klausuren zu suchen.</p>
+    <p>Die Daten basieren auf dem Statistikportal der Uni Göttingen und sind frei zugänglich.</p>
+    <p>Aus datenschutzrechtlichen Gründen werden Klausuren mit weniger als 10 Teilnehmenden nicht angezeigt.</p>
+    <p>Ich habe nur Daten der letzten 10 Semester angeguckt, da ältere Klausuren wahrscheinlich nicht viel über die nächsten Semester sagen.</p>
     <h2>Umgang:</h2>
-    <p>So geht man mit dem <b>Klausur-Inator</b> um.</p>
+    <p>Sag dem <b>Klausur-Inator</b> einfach für welchen Studiengang du gerne Daten hättest.</p>
+    <p>Er kann dir eine nach Notenschnitt sortiere Liste an Klausuren zeigen, damit du bessere Noten kriegst!</p>
+    <p>Denke auch daran, dass es Teilweise mehrere Dozierende für die gleiche Klausur gibt, etwas suchen ist bisher noch nötig.</p>
+    <h2>Wie geht das Projekt weiter?</h2>
+    <p>Ich würde gerne noch einen filter nach speziellen Modulen (auch nach Modulnummer) hinzufügen.</p>
+    <p>Falls du noch Ideen hast, kannst du mir gerne eine Email schreiben: maxime.bonnin@gmx.de</p>
 </div>
 
 {% endblock %}
