--- a/templates/base.html
+++ b/templates/base.html
@@ -65,6 +65,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   </body>
   <footer>
-    Ein Produkt der Langeweile von: [Maxime Bonnin][https://github.com/MaximeBonnin/klausur-inator)
+    Ein Produkt der Langeweile von: <a href="https://github.com/MaximeBonnin/klausur-inator">Maxime Bonnin</a>. Bei Beschwerden bitte <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwinlKrjmOD6AhWtxgIHHTMLBWQQwqsBegQICRAB&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3DdQw4w9WgXcQ&usg=AOvVaw0aHtehaphMhOCAkCydRLZU">hier</a> klicken.
   </footer>
 </html>
