--- a/templates/base.html
+++ b/templates/base.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
   </head>
 <body>
-  <div class="header">
+    <div class="wrapper">
+        <div class="header">
     <h1 align="center"><a href="{{ url_for('index') }}">Klausur-inator</a></h1>
     <h5 class="text-muted" align="center">Gute Noten ohne mehr zu lernen!</h5>
   </div>
-    <div class="wrapper">
 
           <!--Form to select Department, Study Type, and if Schüsselkompetenzen should be included-->
         <form action="#" class="row g-3" method="post">
@@ -64,7 +64,7 @@
         <button class="btn btn-primary" type="submit" value="submit">Finde meine Klausur!</button>
       </div>
     </form>
-        <div>{% block content %}{% endblock %}</div>
+    <div class="content">{% block content %}{% endblock %}</div>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <div class="push"></div>
     </div>
