search by dozierend and modul_nr added

--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,8 @@
         <div class="col-md-3">
         <label for="validationDefault01" class="form-label">Fakultät</label>
         <select class="form-select" id="validationDefault01" name="fak" required>
-            <option value="Allgemein">Allgemein (Nur Schlüsselkompetenzen)</option>
+            <option value="Alle">Alle</option>
+            <option value="Allgemein">Nur Schlüsselkompetenzen</option>
             <option value="Agrar">Fakultät für Agrarwissenschaften</option>
             <option value="Bio_Psycho">Fakultät für Biologie und Psychologie</option>
             <option value="Chemie">Fakultät für Chemie</option>
@@ -40,6 +41,7 @@
         <div class="col-md-3">
         <label for="validationDefault02" class="form-label">Bachelor / Master</label>
         <select class="form-select" id="validationDefault02" name="bach" required>
+            <option value="Alle">Alle</option>
             <option value="B">Bachelor</option>
             <option value="M">Master</option>
             <option value="Mag">Magister?</option>
@@ -56,8 +58,8 @@
         </select>
       </div>
         <div class="col-md-3">
-            <label for="validationDefault04" class="form-label">Modulname (optional)</label>
-            <input class="form-control me-2" id="validationDefault04" type="search" placeholder="Modulname" name="srch" aria-label="Search">
+            <label for="validationDefault04" class="form-label">Suche (optional)</label>
+            <input class="form-control me-2" id="validationDefault04" type="search" placeholder="Modul / Nummer / Name" name="srch" aria-label="Search">
         </div>
 
       <div class="col-12" align="center">
