small layout changes and update description

--- a/templates/base.html
+++ b/templates/base.html
@@ -51,7 +51,7 @@
         </select>
       </div>
         <div class="col-md-3">
-        <label for="validationDefault03" class="form-label">Auch Schlüsselkompetenzen?</label>
+        <label for="validationDefault03" class="form-label">Schlüsselkompetenzen?</label>
         <select class="form-select" id="validationDefault03" name="sk" required>
             <option value=0>Nein</option>
             <option value=1>Ja</option>
