--- a/templates/index.html
+++ b/templates/index.html
@@ -20,9 +20,9 @@ Klausur-inator
     <p>Sag dem <b>Klausur-Inator</b> einfach, für welchen Studiengang du gerne Daten hättest. Dabei kannst du sowohl auswählen,
     welche Fakultät für dich relevant ist als auch, ob du im Bachelor / Master oder andern Formen des Studiums bist.
     Zudem kannst du dich entscheiden, ob du auch Schlüsselkompetenzen in den Ergebnissen haben möchtest. Zuletzt kannst du dann
-    noch nach bestimmten Modulnamen (leider noch nicht Modulnummer!) suchen, um deine Suche zu verfeinern.</p>
+    noch nach bestimmten Modulnamen, Modulnummern oder auch Namen von Dozierenden suchen, um deine Suche zu verfeinern.</p>
     <p>Nachdem du die Suche ausführst, wird dir eine Tabelle mit den Daten angezeigt. Dort findest du die Studienmodule, die
-    Dozierenden und den (nach Anzahl der Personen die geschrieben haben gewichteten) Notenschnitt für das Modul. Wenn du mehr über
+    Dozierenden und den (nach Anzahl der Personen die Klausuren geschrieben haben gewichteten) Notenschnitt für das Modul. Wenn du mehr über
     ein Modul oder über bestimmte Dozierende erfahren möchtest, kannst du sie anklicken.</p>
     <p>Die Modul-Info sagt dir, welche Dozierenden das ausgewählte Modul anbieten und wie der jeweilige Schnitt ist.
     Zudem erhältst  du eine Liste mit allen Klausuren der letzten 10 Semester. Damit kannst du gut einschätzen, ob es vielleicht
@@ -33,8 +33,8 @@ Klausur-inator
 
 
     <h2>Wie geht das Projekt weiter?</h2>
-    <p>Ich würde gerne noch einen Filter nach speziellen Modulen (auch nach Modulnummer) hinzufügen.</p>
-    <p>Falls du noch Ideen hast, kannst du mir gerne eine E-mail schreiben: <a href="mailto:maxime.bonnin@gmx.de">maxime.bonnin@gmx.de</a></p>
+    <p>Ich bin relativ zufrieden mit dem bisherigen Ergebnis aber würde gerne noch weiter machen. Vielleicht ein Filter nach Klausuren die im nächsten Semester angeboten werden?</p>
+    <p>Falls du noch Ideen für weitere Funktionen hast, kannst du mir gerne eine E-mail schreiben: <a href="mailto:maxime.bonnin@gmx.de">maxime.bonnin@gmx.de</a></p>
 </div>
 
 {% endblock %}
