--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
     <meta name="description" content="Gute Noten ohne mehr zu lernen!">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <meta name="google-site-verification" content="VjthPW1NJ0WY-076uG0uywK8V6TQFLZNXe5LvNJ9k4c" />
   </head>
 <body>
     <div class="wrapper">
