--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}
-Klausur-inator
+Finde die einfachsten Klausuren der Uni Göttingen
 {% endblock %}
 
 {% block header %}
