--- a/templates/base.html
+++ b/templates/base.html
@@ -2,16 +2,17 @@
 <html lang="en">
 <head>
     <title>{% block title %}{% endblock %}</title>
-    <meta name="description" content="Gute Noten ohne mehr zu lernen!">
+    <meta name="description" content="Mit dem Klausur-Inator kannst du nach Dozierenden und Klausuren filtern um bessere Noten zu schreiben">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="canonical" href="https://klausur-inator.up.railway.app/">
     <meta name="google-site-verification" content="VjthPW1NJ0WY-076uG0uywK8V6TQFLZNXe5LvNJ9k4c" />
   </head>
 <body>
     <div class="wrapper">
         <div class="header">
-    <h1 align="center"><a href="{{ url_for('index') }}">Klausur-inator</a></h1>
-    <h5 class="text-muted" align="center">Gute Noten ohne mehr zu lernen!</h5>
+    <h2 id="klausur-inator" align="center"><a href="{{ url_for('index') }}">Klausur-inator</a></h2>
+    <h1 id="main-title" class="text-muted" align="center">Finde die einfachsten Klausuren der Uni Göttingen!</h1>
   </div>
 
           <!--Form to select Department, Study Type, and if Schüsselkompetenzen should be included-->
