--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@ Finde die einfachsten Klausuren der Uni Göttingen
     <p>Der <b>Klausur-Inator</b> kann dir helfen nach fairen Dozierenden und Klausuren zu suchen. Dafür habe ich die
     Daten des Statistikportal FlexNow der Uni Göttingen heruntergeladen und zusammengefasst. Diese Daten sind frei zugänglich, da der
     Server der Uni keine Form der Autorisierung benötigt. Aus datenschutzrechtlichen Gründen werden Klausuren mit weniger
-    als 10 Teilnehmenden nicht ausgegeben. Ich habe nur Daten der letzten 10 Semester angeguckt, da ältere Klausuren
+    als 10 Teilnehmenden nicht ausgegeben. Ich habe nur Daten der letzten 10 Semester (stand Oktober 2022) angeguckt, da ältere Klausuren
     wahrscheinlich nicht viel über die nächsten Semester sagen.</p>
 
     <h2>Umgang:</h2>
